Adding updates style fixes.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="profile">
       <img src="images/vijay.png" alt="vijay-profile">
       <h2>Hello there!</h2>
-      <p class="profile-description">I am a passionate Software developer who is either listening to J. cole or learning new skills. I 💗 Masala Chai (Yeah right, its not chai tea!).
+      <p class="intro">I am a passionate Software developer who is either listening to J. cole or learning new skills. I 💗 Masala Chai (Yeah right, its not chai tea!).
     </div>
     <hr>
     <div class="skills">
@@ -42,17 +42,17 @@
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <h3>If you want someone who does more than just sitting on a corner and code!</h3>
-      <p class="contact-me-text">Do you also love masala Chai as much as I do? Let's talk about how awesome chai is! We can code while having a fresh masala chai!</p>
+      <h3>If you want to talk about chai and programming!</h3>
+      <p class="contact-me-text">Do you also love masala chai as much as I do? Let's talk about how awesome chai is! We can code while having a fresh masala chai!</p>
       <a class="btn" href="mailto:vijayabhichandani@email.com">CONTACT ME</a>
     </div>
   </div>
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/in/vijay-abhichandani-1208a6150">LinkedIn</a>
-    <a class="footer-link" href="https://www.facebook.com/vijay2609/">Facebook</a>
-    <a class="footer-link" href="https://github.com/vijay260994">Github</a>
+    <a href="https://www.linkedin.com/in/vijay-abhichandani-1208a6150">LinkedIn</a>
+    <a href="https://www.facebook.com/vijay2609/">Facebook</a>
+    <a href="https://github.com/vijay260994">Github</a>
     <p class="copyright">© 2021 Vijay Abhichandani.</p>
   </div>
 
